grammar.js
    source_file: $ => repeat($._definition),

    // ---------------------------------------------------------------------
    // Top-level definitions  (prolang.y `def`, line ~9790)
    // ---------------------------------------------------------------------

    _definition: $ => choice(
      $.function_definition,
      $.global_var,
      $.struct_definition,
      $.inheritance,
      $.default_visibility,
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_undef,
      $.preproc_pragma,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_call,
    ),

    // ---------------------------------------------------------------------
    // Preprocessor (handled in lex.c, but we expose a tree-sitter-c-style
    // approximation so editors can navigate). Adapted from tree-sitter-c.
    // ---------------------------------------------------------------------

    _preproc_expression: $ => choice(
      $.identifier,
      $.number_literal,
      $.string_literal,
      $.preproc_defined,
      alias($.preproc_unary_expression, $.unary_expression),
      alias($.preproc_binary_expression, $.binary_expression),
      alias($.preproc_parenthesized_expression, $.parenthesized_expression),
      alias($.preproc_call_expression, $.function_call),
    ),

    function_definition: $ => seq(
      optional($.async_modifier),
      repeat($.type_modifier),
      field('type', optional($._basic_type)),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      field('body', choice($.block, ';')),
    ),

    parameter_list: $ => seq(
      '(',
      choice(
        commaSep($.parameter),
        'void',
      ),
      ')',
    ),

    // prolang.y `new_arg_name` (line 11176): `non_void_type L_IDENTIFIER
    // opt_default_value`. The basic-type half of `non_void_type` is
    // optional (defaults to mixed). See `t-language/ti-types.c` for
    // typeless params. `varargs` is technically part of
    // `type_modifier_list` (the only modifier the driver lets through);
    // we surface it as its own slot since real usage is always a single
    // `varargs` prefix.
    parameter: $ => seq(
      optional('varargs'),
      field('type', optional($.non_void_type)),
      field('name', $.identifier),
      optional(seq('=', field('default', $._expression))),
    ),

    // ---------------------------------------------------------------------
    // Globals: `int x, *y, z = 1;`: type then comma-separated names, each
    // with optional `*`-prefix (legacy pointer-array decl) and initializer.
    // ---------------------------------------------------------------------

    global_var: $ => seq(
      repeat($.type_modifier),
      field('type', $._basic_type),
      commaSep1($._global_declarator),
      ';',
    ),

    _global_declarator: $ => seq(
      repeat('*'),
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
    ),

    // ---------------------------------------------------------------------
    // Structs: prolang.y `struct_decl` (line 10434) covers forward-decl
    // (`struct foo;`), full def (`struct foo { ... }`), and base-struct
    // extension (`struct foo (bar) { ... }`).
    // ---------------------------------------------------------------------

    inheritance: $ => seq(
      repeat(choice(
        $.type_modifier,
        $.inheritance_modifier,
        $.inheritance_scope,
      )),
      'inherit',
      field('source', $._string_constant),
      ';',
    ),

    // prolang.y line 13207. Adjacent string literals (`"a" "b"`, no `+`)
    // are also valid, but lex.c handles them by concatenating tokens
    // before bison sees the result (see prolang.y:13217 fatal). Our
    // `concatenated_string` covers the adjacent form; this rule covers
    // the explicit `+` and parenthesised forms. `+` is left-associative
    // per the bison rule `string_constant '+' L_STRING` (left-recursive).
    _string_constant: $ => choice(
      $.string_literal,
      $.concatenated_string,
      $.identifier,                              // macro stand-in
      prec.left(seq($._string_constant, '+', $._string_constant)),
      seq('(', $._string_constant, ')'),
    ),

    inheritance_modifier: $ => 'virtual',

    // prolang.y inheritance_qualifier (line 10814): the scope name
    // (`functions` / `variables` / `structs`) isn't a lexer keyword.
    // prolang.y string-compares the L_IDENTIFIER. Literal-string tokens
    // here only match in inherit/default position, so these stay usable
    // as ordinary identifiers elsewhere.
    inheritance_scope: $ => choice('variables', 'functions', 'structs'),

    type_modifier: $ => choice(
      'nomask',
      'static',
      'private',
      'public',
      'varargs',
      'protected',
      'nosave',
      'deprecated',
      'visible',
    ),

    async_modifier: $ => 'async',

    _basic_type: $ => choice(
      $.non_void_type,
      'void',
    ),

    non_void_type: $ => sep1('|', $._single_non_void_type),

    _single_non_void_type: $ => choice(
      $._atomic_type,
      prec.left(seq($._single_non_void_type, '*')),
    ),

    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.expression_statement,
      $.local_var_decl,
      $.return_statement,
      $.if_statement,
      $.while_statement,
      $.do_statement,
      $.for_statement,
      $.foreach_statement,
      $.switch_statement,
      $.break_statement,
      $.continue_statement,
      $.block,
      ';',
      $.preproc_if_in_statement,
      $.preproc_ifdef_in_statement,
      // Leaf preprocessor directives mid-function. `#pragma` flips a
      // parser-state flag in the LDMud driver; we don't honor the
      // semantic effect, but it has to *parse*. Real-world LPC also
      // has stray `#define` / `#undef` / `#include` mid-function.
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_undef,
      $.preproc_pragma,
      $.preproc_include,
    ),

    expression_statement: $ => seq($._comma_expression, ';'),

    local_var_decl: $ => seq(
      field('type', $._basic_type),
      commaSep1($._local_declarator),
      ';',
    ),

    _local_declarator: $ => seq(
      repeat('*'),
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
    ),

    return_statement: $ => seq(
      'return',
      optional($._comma_expression),
      ';',
    ),

    if_statement: $ => prec.right(seq(
      'if',
      '(',
      field('condition', $._comma_expression),
      ')',
      field('consequence', $._statement),
      optional(seq('else', field('alternative', $._statement))),
    )),

    foreach_statement: $ => seq(
      'foreach', '(',
      field('vars', sep1(',', $._foreach_var)),
      choice(':', 'in'),
      field('source', choice($._expression, $.foreach_range)),
      ')',
      field('body', $._statement),
    ),

    _foreach_var: $ => choice(
      $.identifier,
      seq(
        field('type', $._basic_type),
        repeat('*'),
        field('name', $.identifier),
      ),
    ),

    // `lower .. upper` form of foreach source. Distinct from the range
    // syntax used in subscripts (`x[a..b]`) and in switch case ranges.
    foreach_range: $ => seq(
      field('lower', $._expression),
      '..',
      field('upper', $._expression),
    ),

    _comma_expression: $ => prec.left(PREC.COMMA, commaSep1($._expression)),

    _expression: $ => choice(
      $.assignment_expression,
      $.conditional_expression,
      $.binary_expression,
      $.unary_expression,
      $.update_expression,
      $.cast_expression,
      $.decl_cast_expression,
      $.lvalue_ref_expression,
      $._expr_primary,
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', $._expression),
      field('operator', $.assignment_operator),
      field('right', $._expression),
    )),

    assignment_operator: $ => choice(
      '=', '*=', '/=', '%=', '+=', '-=',
      '<<=', '>>=', '>>>=',
      '&=', '&&=', '^=', '|=', '||=',
    ),

    binary_expression: $ => {
      const table = [
        ['||',  PREC.LOGICAL_OR],
        ['&&',  PREC.LOGICAL_AND],
        ['|',   PREC.INCLUSIVE_OR],
        ['^',   PREC.EXCLUSIVE_OR],
        ['&',   PREC.BITWISE_AND],
        ['==',  PREC.EQUAL],
        ['!=',  PREC.EQUAL],
        ['in',  PREC.EQUAL],
        ['<',   PREC.RELATIONAL],
        ['<=',  PREC.RELATIONAL],
        ['>',   PREC.RELATIONAL],
        ['>=',  PREC.RELATIONAL],
        ['<<',  PREC.SHIFT],
        ['>>',  PREC.SHIFT],
        ['>>>', PREC.SHIFT],
        ['+',   PREC.ADD],
        ['-',   PREC.ADD],
        ['*',   PREC.MULTIPLY],
        ['/',   PREC.MULTIPLY],
        ['%',   PREC.MULTIPLY],
      ];
      return choice(...table.map(([op, p]) =>
        prec.left(p, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        ))));
    },

    function_call: $ => prec(PREC.CALL, seq(
      field('function', choice(
        $.identifier,
        $.scoped_function_name,
      )),
      field('arguments', $.argument_list),
    )),

    scoped_function_name: $ => choice(
      seq('::', field('name', $.identifier)),
      seq(field('anchestor', choice($.identifier, $.string_literal)),
          '::', field('name', $.identifier)),
    ),

    argument_list: $ => seq(
      '(',
      aggregateBody(seq($._expression, optional('...')), $),
      ')',
    ),

    // Higher precedence than `member_access` so that `obj->fun(...)`
    // shifts `(` into the call rather than reducing to a bare member
    // access. (Surfaced once `_aggregate_slot` allowed bare-expression
    // slots without a trailing comma to disambiguate.)
    subscript_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._expression),
      '[',
      optional($._index_anchor),
      field('index', $._expression),
      optional(seq(',', optional($._index_anchor), field('index2', $._expression))),
      ']',
    )),

    // `x[a..b]`: single-key range subscript.
    // `x[k, a..b]` : two-key map range subscript: takes key `k` then a
    // range over the value column. prolang.y has the full suite of
    // anchor combos at lines 16760+; we model it permissively as an
    // optional `key,` prefix.
    _index_anchor: $ => choice('<', '>'),

    // ----- Catch / await / yield -----

    // prolang.y `catch` (line 18655) + `opt_catch_mods` (line 18755).
    // The modifier list is introduced by `;` and modifiers are
    // comma-separated. `reserve`/`limit` take an expression, `nolog`/
    // `publish` don't.
    catch_expression: $ => seq(
      'catch',
      '(',
      $._comma_expression,
      optional(seq(';', commaSep1($.catch_modifier))),
      ')',
    ),

    // prolang.y `opt_catch_modifier` (line 18803). LDMud parses every
    // modifier as a bare identifier and validates names in the action;
    // we bake the four documented names in directly. `reserve <expr>`
    // and `limit <expr>` take an int expression; `nolog`/`publish` are
    // bare.
    catch_modifier: $ => choice(
      'nolog',
      'publish',
      seq('reserve', $._expression),
      seq('limit', $._expression),
    ),

    // prolang.y coroutine_call (line 18578).
    //   await(coro)            await(coro, expr)
    //   yield()  yield(value)  yield(value, coro)
    inline_func: $ => prec.right(seq(
      optional($.async_modifier),
      'function',
      field('type', optional($._basic_type)),
      field('parameters', optional($.parameter_list)),
      field('context', optional($.inline_context)),
      field('body', $.block),
    )),

    inline_context: $ => prec.right(seq(
      ':',
      sep(';', $.local_var_decl_no_semi),
      optional(';'),
    )),

    // Variant of local_var_decl without a trailing `;`, used inside the
    // `: ... ;` context list of an inline function.
    local_var_decl_no_semi: $ => seq(
      field('type', $._basic_type),
      commaSep1($._local_declarator),
    ),

    // `(: ... :)` short-form closure. lex.c emits L_BEGIN_INLINE /
    // L_END_INLINE as atomic tokens (lex.c:6119,6137) — no whitespace
    // allowed between `(` and `:` or between `:` and `)`. Body is
    // `statements inline_comma_expr` per prolang.y line 10260.
    //
    // We can't tokenize `(:` atomically because the corpus also
    // contains `return(::lfun())` (no space between `(` and `::`); a
    // greedy `(:` token swallows the first `:` of `::` and breaks the
    // parse. tree-sitter's regex tokens don't support negative
    // lookahead, so we instead spell the open as `(` immediately
    // followed by `:`, where `token.immediate` enforces "no whitespace
    // between" without committing the `:` early. The same applies to
    // `:)` for symmetry with `:)`-vs-`:` (e.g., `x?:y` Elvis-of-if-else).
    array_literal: $ => seq(
      '(', '{',
      aggregateBody($._expression, $),
      '}', ')',
    ),

    // `'({ ... })` — quoted aggregate (lex.c ~6223). One or more `'`
    // glued to `({` opens the form; the quote count is preserved at
    // runtime but doesn't change parse shape. Distinct from `#'({` which
    // is the AGGREGATE operator-closure (lex.c symbol_operator:1648).
    identifier: $ => /[\p{L}_$][\p{L}\p{N}_$]*/u,

    // lex.c ~line 6428: int (decimal/0x/0o/0b) or float (1.0, .5, 1e10).
    // Trailing-dot floats (`4.`) are deliberately rejected as a token.
    // lex.c only treats `.` as a float separator when not followed by
    // another `.`, and we can't express that lookahead in a token regex.
    // Forbidding `4.` lets `1..5` lex correctly as `1`, `..`, `5`.
    number_literal: $ => {
      const decimal = /[0-9]+/;
      return token(choice(
        // hex, octal, binary
        seq(/0[xX]/, /[0-9a-fA-F]+/),
        seq(/0[oO]/, /[0-7]+/),
        seq(/0[bB]/, /[01]+/),
        // float forms (require digits both sides of `.`, OR leading dot, OR
        // exponent without dot)
        seq(decimal, '.', decimal, optional(/[eE][-+]?[0-9]+/)),
        seq('.', decimal, optional(/[eE][-+]?[0-9]+/)),
        seq(decimal, /[eE][-+]?[0-9]+/),
        // plain decimal
        decimal,
      ));
    },

    string_literal: $ => seq(
      '"',
      repeat(choice(
        token.immediate(prec(1, /[^\\"\n]+/)),
        $.escape_sequence,
      )),
      '"',
    ),

    // Adjacent string literals concatenate at compile time. We also
    // accept LDMud's predefined `__FOO__` macros here, since they expand
    // to strings before parsing and the resulting concatenation is a
    // common idiom (`__DIR__ ".tmp.c"`, `__MASTER_OBJECT__ ".gc.log"`).
    // The function-like form `__PATH__(n)"x"` is common in the dunemud
    // corpus — admitted as the first or subsequent slot.
    escape_sequence: $ => token.immediate(prec(1, seq(
      '\\',
      choice(
        /[0-9]{1,3}/,
        seq(/[xX]/, /[0-9a-fA-F]+/),
        seq(/[uU]/, /[0-9a-fA-F]+/),
        seq('0', /[oO]/, /[0-7]+/),
        seq('0', /[bB]/, /[01]+/),
        /./,
        /\r?\n/,
      ),
    ))),

    // Char literal: `'X'` where X is one char or one escape. Higher token
    // precedence than `symbol` so `'a'` lexes as a char literal, not as a
    // symbol followed by a stray quote. Escapes mirror string-literal
    // rules (see `escape_sequence` above): structured numeric forms with
    // digits, otherwise `\<any printable>` falls back to the literal.
    // Char literals can't span lines, so `\<newline>` is rejected here.
