test/corpus/function_default_args.txt
================================================================================
Function Default Args
================================================================================

x(int x = 10, mapping y = 0, varargs mixed * rest) {
  return;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (non_void_type)
        (identifier)
        (number_literal))
      (parameter
        (non_void_type)
        (identifier)
        (number_literal))
      (parameter
        (non_void_type)
        (identifier)))
    (block
      (return_statement))))
