test/corpus/function_preproc_ifdef.txt
================================================================================
Function Body Preprocessor Ifdef
================================================================================

void x()
{
#ifdef COMPAT_FLAG
  write("Compat flag on\n");
  return;
#endif
  write("Compat flag off\n");
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (preproc_ifdef_in_statement
        (identifier)
        (expression_statement
          (function_call
            (identifier)
            (argument_list
              (string_literal
                (escape_sequence)))))
        (return_statement))
      (expression_statement
        (function_call
          (identifier)
          (argument_list
            (string_literal
              (escape_sequence))))))))
