test/corpus/globals_commas.txt
================================================================================
Globals Commas
================================================================================

int x, y, z;
string a, b, c;

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (identifier)
    (identifier)
    (identifier))
  (global_var
    (non_void_type)
    (identifier)
    (identifier)
    (identifier)))
