test/corpus/globals_commas_init.txt
================================================================================
Globals Commas w/ Init
================================================================================

int x = 3, y, z = 10;
string a, b = "test", c;

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (identifier)
    (number_literal)
    (identifier)
    (identifier)
    (number_literal))
  (global_var
    (non_void_type)
    (identifier)
    (identifier)
    (string_literal)
    (identifier)))
