test/corpus/index_expr.txt
================================================================================
Index Expr Test
================================================================================

int *x = ({ 10, 20, 30 });

int *x2 = x[ < 2*2];
int *x3 = x[ > 2*x2[0]];

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (identifier)
    (array_literal
      (number_literal)
      (number_literal)
      (number_literal)))
  (global_var
    (non_void_type)
    (identifier)
    (subscript_expression
      (identifier)
      (binary_expression
        (number_literal)
        (number_literal))))
  (global_var
    (non_void_type)
    (identifier)
    (subscript_expression
      (identifier)
      (binary_expression
        (number_literal)
        (subscript_expression
          (identifier)
          (number_literal))))))
