test/corpus/inherit_functions.txt
================================================================================
Inherit Functions
================================================================================

functions inherit "whatevs";

--------------------------------------------------------------------------------

(source_file
  (inheritance
    (inheritance_scope)
    (string_literal)))
