test/corpus/inherit_variables.txt
================================================================================
Inherit Variables
================================================================================

variables inherit "whatevs";

--------------------------------------------------------------------------------

(source_file
  (inheritance
    (inheritance_scope)
    (string_literal)))
