test/corpus/inline_function_empty_semi_context.txt
================================================================================
Inline Function Empty Semicolon Context
================================================================================

closure x(int a) {
  closure y = function int (int z) : ; {
    return z;
  };

  return y;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (non_void_type)
    (identifier)
    (parameter_list
      (parameter
        (non_void_type)
        (identifier)))
    (block
      (local_var_decl
        (non_void_type)
        (identifier)
        (inline_func
          (non_void_type)
          (parameter_list
            (parameter
              (non_void_type)
              (identifier)))
          (inline_context)
          (block
            (return_statement
              (identifier)))))
      (return_statement
        (identifier)))))
